<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SABTab</string>

	<string name="no_items">No items found</string>
	<string name="list_error">Error downloading items</string>

	<string name="status_idle">IDLE</string>
	<string name="status_paused">PAUSED</string>
	<string name="status_running">RUNNING</string>
	<string name="status_connecting">CONNECTING</string>
	<string name="status_error">ERROR</string>

	<string name="tab_queue">Queue</string>
	<string name="tab_history">History</string>

	<string name="menu_pause">Pause queue</string>
	<string name="menu_resume">Resume queue</string>
	<string name="menu_warnings">Latest warnings</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_speed_limit">Speed limit</string>
	<string name="menu_about">About</string>

	<string name="history_list_retry">Retry</string>
	<string name="history_list_delete">Delete</string>

	<string name="delete_confirm">Are you sure you want to cancel the download and delete the downloaded parts?</string>

	<string name="queue_list_pause">Pause</string>
	<string name="queue_list_resume">Resume</string>
	<string name="queue_list_moveup">Move Up</string>
	<string name="queue_list_movedown">Move Down</string>
	<string name="queue_list_cancel">Cancel download</string>

	<string name="priority_force">Force</string>
	<string name="priority_high">High</string>
	<string name="priority_normal">Normal</string>
	<string name="priority_low">Low</string>

	<string name="unpack1">Download</string>
   <string name="unpack2">Download+Repair</string>
   <string name="unpack3">Download+Repair+Unpack</string>
   <string name="unpack4">Download+Repair+Unpack+Delete</string>

	<string name="pref_sabtab_category">SabTab</string>
	<string name="pref_sabserver_title">SABnzbd server</string>
	<string name="pref_sabserver_summary">The URL used to connect to the SABnzbd server</string>
	<string name="pref_sabapikey_title">SABnzbd API key</string>
	<string name="pref_sabapikey_summary">The SABnzbd API key for authentication with the server</string>

	<string name="about_title">About</string>
	<string name="about_tab_version">SabTab version : </string>
	<string name="about_sab_version">SABnzbd version : </string>

	<string name="speed_title">Change download speed limit</string>
	<string name="speed_unlimited">Unlimited</string>
	<string name="speed_custom">Custom speed</string>

	<string name="queue_remains">%1$s / %2$s remaining</string>
	<string name="queue_timeleft">%1$s left @ %2$s</string>
</resources>
