<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_pause"
		android:icon="@drawable/ic_media_pause"
		android:title="@string/menu_pause"
		android:showAsAction="ifRoom|withText" />

	<item android:id="@+id/menu_speed"
		android:icon="@drawable/ic_speed_limit"
		android:title="@string/menu_speed_limit"
		android:showAsAction="ifRoom|withText" />

	<item android:id="@+id/menu_resume"
		android:icon="@drawable/ic_media_play"
		android:title="@string/menu_resume"
		android:showAsAction="ifRoom|withText" />

	<item android:id="@+id/menu_warnings"
		android:title="@string/menu_warnings"
		android:showAsAction="withText" />

	<item android:id="@+id/menu_settings"
		android:title="@string/menu_settings"
		android:showAsAction="withText" />

	<item android:id="@+id/about"
		android:title="@string/menu_about"
		android:showAsAction="withText" />
</menu>
